xgettext: Split source code into smaller files.
* gettext-tools/src/rc-str-list.h: New file, extracted from
gettext-tools/src/xgettext.h.
* gettext-tools/src/xg-encoding.h: Likewise.
* gettext-tools/src/xg-mixed-string.h: Likewise.
* gettext-tools/src/xg-arglist-context.h: Likewise.
* gettext-tools/src/xg-arglist-callshape.h: Likewise.
* gettext-tools/src/xg-arglist-parser.h: Likewise.
* gettext-tools/src/xg-message.h: Likewise.
* gettext-tools/src/xg-encoding.c: New file, extracted from
gettext-tools/src/xgettext.c.
* gettext-tools/src/xg-mixed-string.c: Likewise.
* gettext-tools/src/xg-arglist-context.c: Likewise.
* gettext-tools/src/xg-arglist-callshape.c: Likewise.
* gettext-tools/src/xg-arglist-parser.c: Likewise.
* gettext-tools/src/xg-message.c: Likewise.
* gettext-tools/src/xgettext.h: Remove declarations that moved to rc-str-list.h
and xg-*.h.
(add_all_comments, comment_tag, msgstr_prefix, msgstr_suffix,
default_syntax_check, current_formatstring_parser1,
current_formatstring_parser2, current_formatstring_parser3): New declarations.
(xgettext_comment, xgettext_comment_reset, savable_comment_to_xgettext_comment,
recognize_qt_formatstrings): New declarations.
(substring_match): Remove obsolete declaration.
* gettext-tools/src/xgettext.c: Include xgettext.h first.
Include <iconv.h>, rc-str-list.h, xg-encoding.h, xg-arglist-context.h,
xg-message.h. Don't include xsize.h, po-xerror.h, unistr.h.
(add_all_comments, comment_tag, msgstr_prefix, msgstr_suffix,
default_syntax_check): Make global.
(split_keywordspec, insert_keyword_callshape): Moved to xg-arglist-callshape.c.
(null_context, passthrough_context, inherited_context,
null_context_list_iterator, passthrough_context_circular_list,
passthrough_context_list_iterator, flag_context_list_iterator,
flag_context_list_iterator_advance, flag_context_list_table_lookup): Move to
xg-arglist-context.c.
(flag_context_list_table_insert): Move bulk of body to new function
flag_context_list_table_add in xg-arglist-context.c.

--- a/gettext-tools/src/Makefile.am
+++ b/gettext-tools/src/Makefile.am
@@ -52,7 +52,10 @@ write-qt.h \
 read-desktop.h write-desktop.h \
 write-xml.h \
 po-time.h plural-table.h lang-table.h format.h filters.h \
-xgettext.h x-c.h x-po.h x-sh.h x-python.h x-lisp.h x-elisp.h x-librep.h \
+xgettext.h \
+rc-str-list.h xg-encoding.h xg-mixed-string.h xg-arglist-context.h \
+xg-arglist-callshape.h xg-arglist-parser.h xg-message.h \
+x-c.h x-po.h x-sh.h x-python.h x-lisp.h x-elisp.h x-librep.h \
 x-scheme.h x-smalltalk.h x-java.h x-properties.h x-csharp.h x-awk.h x-ycp.h \
 x-tcl.h x-perl.h x-php.h x-stringtable.h x-rst.h x-glade.h x-lua.h \
 x-javascript.h x-vala.h x-gsettings.h x-desktop.h x-appdata.h
@@ -177,6 +180,10 @@ else
 xgettext_SOURCES = ../woe32dll/c++xgettext.cc
 endif
 xgettext_SOURCES += \
+  xg-encoding.c \
+  xg-mixed-string.c \
+  xg-arglist-context.c xg-arglist-callshape.c xg-arglist-parser.c \
+  xg-message.c \
   x-c.c x-po.c x-sh.c x-python.c x-lisp.c x-elisp.c x-librep.c x-scheme.c \
   x-smalltalk.c x-java.c x-csharp.c x-awk.c x-ycp.c x-tcl.c x-perl.c x-php.c \
   x-rst.c x-lua.c x-javascript.c x-vala.c \
