xgettext tests: Rename xgettext-c-15 to xgettext-c-ctxt-3.
* gettext-tools/tests/xgettext-c-ctxt-3: Renamed from
gettext-tools/tests/xgettext-c-15.
* Makefile.am (TESTS): Update.

--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -80,10 +80,10 @@ TESTS = gettext-1 gettext-2 \
 	xgettext-awk-1 xgettext-awk-2 \
 	xgettext-c-2 xgettext-c-3 xgettext-c-4 xgettext-c-5 \
 	xgettext-c-6 xgettext-c-7 xgettext-c-8 xgettext-c-9 \
-	xgettext-c-12 xgettext-c-13 xgettext-c-14 xgettext-c-15 \
+	xgettext-c-12 xgettext-c-13 xgettext-c-14 \
 	xgettext-c-16 xgettext-c-17 xgettext-c-18 xgettext-c-19 \
 	xgettext-c-21 xgettext-c-23 xgettext-c-24 xgettext-c-25 \
-	xgettext-c-ctxt-1 xgettext-c-ctxt-2 \
+	xgettext-c-ctxt-1 xgettext-c-ctxt-2 xgettext-c-ctxt-3 \
 	xgettext-c-c++-1 xgettext-c-c++-2 \
 	xgettext-csharp-1 xgettext-csharp-2 xgettext-csharp-3 \
 	xgettext-csharp-4 xgettext-csharp-5 xgettext-csharp-6 \
