--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -78,8 +78,7 @@ TESTS = gettext-1 gettext-2 \
 	xgettext-13 xgettext-14 \
 	xgettext-appdata-1 \
 	xgettext-awk-1 xgettext-awk-2 \
-	xgettext-c-2 xgettext-c-3 xgettext-c-4 xgettext-c-5 \
-	xgettext-c-18 \
+	xgettext-c-2 xgettext-c-3 xgettext-c-4 xgettext-c-5 xgettext-c-6 \
 	xgettext-c-comment-1 xgettext-c-comment-2 xgettext-c-comment-3 \
 	xgettext-c-comment-4 xgettext-c-comment-5 xgettext-c-comment-6 \
 	xgettext-c-escape-1 xgettext-c-escape-2 xgettext-c-escape-3 \
