--- a/gettext-tools/misc/gettextize.in
+++ b/gettext-tools/misc/gettextize.in
@@ -301,6 +301,19 @@ if test -n "$intldir"; then
   func_fatal_error "The option '--intl' is no longer available."
 fi
 
+# Require automake 1.9 or newer.
+have_automake19=
+if (aclocal --version) >/dev/null 2>/dev/null; then
+  aclocal_version=`aclocal --version | sed -n -e 1p | sed -e 's/^[^0-9]*//'`
+  case $aclocal_version in
+    1.9* | 1.[1-9][0-9]* | [2-9]*) have_automake19=yes ;;
+  esac
+fi
+if test -z "$have_automake19"; then
+  func_fatal_error "You need the 'aclocal' program from automake 1.9 or newer."
+fi
+min_automake_version=1.9
+
 # Command-line argument processing.
 # Analyzes the remaining arguments.
 # Sets the variables
@@ -781,15 +794,6 @@ Please fill $podir/POTFILES.in as described in the documentation.
   $do_changelog && func_poChangeLog_finish
 done
 
-# Determine whether we can assume automake 1.9 or newer.
-have_automake19=
-if (aclocal --version) >/dev/null 2>/dev/null; then
-  aclocal_version=`aclocal --version | sed -n -e 1p | sed -e 's/^[^0-9]*//'`
-  case $aclocal_version in
-    1.9* | 1.[1-9][0-9]* | [2-9]*) have_automake19=yes ;;
-  esac
-fi
-
 m4filelist='
   gettext.m4
   iconv.m4
@@ -797,38 +801,6 @@ m4filelist='
   lib-ld.m4 lib-link.m4 lib-prefix.m4
   nls.m4
   po.m4 progtest.m4'
-# With aclocal versions < 1.9 we need all m4 files, otherwise "aclocal -I m4"
-# might give an error. (aclocal < 1.9 didn't know which macros are really
-# needed, it looked which macros are potentially needed.)
-min_automake_version=1.9
-if test -z "$have_automake19"; then
-  # Add intldir.m4, intl.m4 and its dependencies.
-  m4filelist=$m4filelist'
-    codeset.m4
-    fcntl-o.m4
-    glibc2.m4
-    glibc21.m4
-    intdiv0.m4
-    intl.m4
-    intl-thread-locale.m4
-    intldir.m4
-    intmax.m4
-    inttypes_h.m4
-    inttypes-pri.m4
-    lcmessage.m4
-    lock.m4
-    longlong.m4
-    printf-posix.m4
-    size_max.m4
-    stdint_h.m4
-    threadlib.m4
-    uintmax_t.m4
-    visibility.m4
-    wchar_t.m4
-    wint_t.m4
-    xsize.m4'
-  min_automake_version=1.8
-fi
 
 # All sorts of bugs could occur if the configure file was remade with the wrong
 # version of gettext.m4 et al. (because then the configure and the po/Makefile.in.in
