Make 'make distcheck' work in a VPATH build.
* Makefile.am (distcheck-hook): Compare files in $(srcdir).
* gettext-tools/examples/po/xsmallpot.sh: Put the resulting POT file in the
source dir, not in the build dir.
* gettext-tools/examples/po/Makefile.am (update-po): Execute sub-make in the
build dir, not in the source dir.
(SMALLPOFILES_FOR_lang): Prefix file names with $(srcdir).
(hello-*/po/*.po): Likewise. Execute mmsmallpo.sh in $(srcdir).

--- a/Makefile.am
+++ b/Makefile.am
@@ -61,75 +61,73 @@ $(srcdir)/configure: $(srcdir)/gettext-runtime/configure.ac $(srcdir)/gettext-to
 
 # Verify that some files are the same.
 distcheck-hook:
-	cmp -s gettext-runtime/po/Makefile.in.in gettext-tools/po/Makefile.in.in
-	cmp -s gettext-runtime/po/Rules-quot gettext-tools/po/Rules-quot
-	cmp -s gettext-runtime/po/boldquot.sed gettext-tools/po/boldquot.sed
-	cmp -s gettext-runtime/po/quot.sed gettext-tools/po/quot.sed
-	cmp -s gettext-runtime/po/en@quot.header gettext-tools/po/en@quot.header
-	cmp -s gettext-runtime/po/en@boldquot.header gettext-tools/po/en@boldquot.header
-	cmp -s gettext-runtime/po/insert-header.sin gettext-tools/po/insert-header.sin
-	cmp -s gettext-runtime/po/remove-potcdate.sin gettext-tools/po/remove-potcdate.sin
-	cmp -s gettext-runtime/po/remove-potcdate.sin gettext-tools/examples/po/remove-potcdate.sin
-	cmp -s gettext-runtime/m4/codeset.m4 gettext-tools/gnulib-m4/codeset.m4
-	cmp -s gettext-runtime/m4/extern-inline.m4 gettext-tools/gnulib-m4/extern-inline.m4
-	cmp -s gettext-runtime/m4/fcntl-o.m4 gettext-tools/gnulib-m4/fcntl-o.m4
-	cmp -s gettext-runtime/m4/flexmember.m4 gettext-tools/gnulib-m4/flexmember.m4
-	cmp -s gettext-runtime/m4/gettext.m4 gettext-tools/gnulib-m4/gettext.m4
-	cmp -s gettext-runtime/m4/glibc2.m4 gettext-tools/gnulib-m4/glibc2.m4
-	cmp -s gettext-runtime/m4/glibc21.m4 gettext-tools/gnulib-m4/glibc21.m4
-	cmp -s gettext-runtime/m4/iconv.m4 gettext-tools/gnulib-m4/iconv.m4
-	cmp -s gettext-runtime/m4/intdiv0.m4 gettext-tools/gnulib-m4/intdiv0.m4
-	cmp -s gettext-runtime/m4/intl.m4 gettext-tools/gnulib-m4/intl.m4
-	cmp -s gettext-runtime/m4/intl-thread-locale.m4 gettext-tools/gnulib-m4/intl-thread-locale.m4
-	cmp -s gettext-runtime/m4/intldir.m4 gettext-tools/gnulib-m4/intldir.m4
-	cmp -s gettext-runtime/m4/intlmacosx.m4 gettext-tools/gnulib-m4/intlmacosx.m4
-	cmp -s gettext-runtime/m4/intmax.m4 gettext-tools/gnulib-m4/intmax.m4
-	cmp -s gettext-runtime/m4/inttypes-pri.m4 gettext-tools/gnulib-m4/inttypes-pri.m4
-	cmp -s gettext-runtime/m4/inttypes_h.m4 gettext-tools/gnulib-m4/inttypes_h.m4
-	cmp -s gettext-runtime/m4/lcmessage.m4 gettext-tools/gnulib-m4/lcmessage.m4
-	cmp -s gettext-runtime/m4/lock.m4 gettext-tools/gnulib-m4/lock.m4
-	cmp -s gettext-runtime/m4/longlong.m4 gettext-tools/gnulib-m4/longlong.m4
-	cmp -s gettext-runtime/m4/nls.m4 gettext-tools/gnulib-m4/nls.m4
-	cmp -s gettext-runtime/m4/po.m4 gettext-tools/gnulib-m4/po.m4
-	cmp -s gettext-runtime/m4/gettext.m4 gettext-tools/gnulib-m4/gettext.m4
-	cmp -s gettext-runtime/m4/printf-posix.m4 gettext-tools/gnulib-m4/printf-posix.m4
-	cmp -s gettext-runtime/m4/progtest.m4 gettext-tools/gnulib-m4/progtest.m4
-	cmp -s gettext-runtime/m4/size_max.m4 gettext-tools/gnulib-m4/size_max.m4
-	cmp -s gettext-runtime/m4/stdint_h.m4 gettext-tools/gnulib-m4/stdint_h.m4
-	cmp -s gettext-runtime/m4/threadlib.m4 gettext-tools/gnulib-m4/threadlib.m4
-	cmp -s gettext-runtime/m4/uintmax_t.m4 gettext-tools/gnulib-m4/uintmax_t.m4
-	cmp -s gettext-runtime/m4/visibility.m4 gettext-tools/gnulib-m4/visibility.m4
-	cmp -s gettext-runtime/m4/wchar_t.m4 gettext-tools/gnulib-m4/wchar_t.m4
-	cmp -s gettext-runtime/m4/wint_t.m4 gettext-tools/gnulib-m4/wint_t.m4
-	cmp -s gettext-runtime/m4/xsize.m4 gettext-tools/gnulib-m4/xsize.m4
-	cmp -s gettext-runtime/libasprintf/gnulib-m4/intmax_t.m4 gettext-tools/gnulib-m4/intmax_t.m4
-	test "`sed 1,16d gettext-runtime/intl/flexmember.h | md5sum`" = "`sed 1,19d gettext-tools/gnulib-lib/flexmember.h | md5sum`"
-	test "`sed 1,16d gettext-runtime/intl/localcharset.h | md5sum`" = "`sed 1,16d gettext-tools/gnulib-lib/localcharset.h | md5sum`"
-	test "`sed 1,16d gettext-runtime/intl/localcharset.c | md5sum`" = "`sed 1,16d gettext-tools/gnulib-lib/localcharset.c | md5sum`"
-	test "`sed 1,16d gettext-runtime/intl/localename.c | md5sum`" = "`sed 1,16d gettext-tools/gnulib-lib/localename.c | md5sum`"
-	test "`sed 1,16d gettext-runtime/intl/localename-table.in.h | md5sum`" = "`sed 1,16d gettext-tools/gnulib-lib/localename-table.h | md5sum`"
-	test "`sed 1,16d gettext-runtime/intl/localename-table.c | md5sum`" = "`sed 1,16d gettext-tools/gnulib-lib/localename-table.c | md5sum`"
-	test "`sed 1,15d gettext-runtime/intl/lock.h | md5sum`" = "`sed 1,15d gettext-tools/gnulib-lib/glthread/lock.h | md5sum`"
-	test "`sed 1,15d gettext-runtime/intl/lock.c | md5sum`" = "`sed -e 1,15d -e 's,glthread/,,g' gettext-tools/gnulib-lib/glthread/lock.c | md5sum`"
-	test "`sed 1,16d gettext-runtime/intl/verify.h | md5sum`" = "`sed 1,16d gettext-tools/gnulib-lib/verify.h | md5sum`"
-	cmp -s gettext-runtime/intl/printf-args.h gettext-runtime/libasprintf/printf-args.h
-	cmp -s gettext-runtime/intl/printf-args.c gettext-runtime/libasprintf/printf-args.c
-	cmp -s gettext-runtime/intl/printf-parse.h gettext-runtime/libasprintf/printf-parse.h
-	cmp -s gettext-runtime/intl/printf-parse.c gettext-runtime/libasprintf/printf-parse.c
-	cmp -s gettext-runtime/intl/verify.h gettext-runtime/libasprintf/verify.h
-	test "`sed 1,18d gettext-runtime/intl/relocatable.h | md5sum`" = "`sed 1,18d gettext-tools/gnulib-lib/relocatable.h | md5sum`"
-	test "`sed 1,18d gettext-runtime/intl/relocatable.c | md5sum`" = "`sed 1,18d gettext-tools/gnulib-lib/relocatable.c | md5sum`"
-	cmp -s gettext-runtime/intl/vasnprintf.h gettext-runtime/libasprintf/vasnprintf.h
-	test "`sed 1,16d gettext-runtime/intl/vasnprintf.c | md5sum`" = "`sed 1,16d gettext-tools/gnulib-lib/vasnprintf.c | md5sum`"
-	cmp -s gettext-runtime/intl/vasnprintf.c gettext-runtime/libasprintf/vasnprintf.c
-	cmp -s gettext-runtime/intl/xsize.h gettext-runtime/libasprintf/xsize.h
-	test "`sed 1,16d gettext-runtime/intl/xsize.h | md5sum`" = "`sed 1,16d gettext-tools/gnulib-lib/xsize.h | md5sum`"
-	cmp -s gettext-runtime/man/help2man gettext-tools/man/help2man
-	cmp -s gettext-runtime/man/x-to-1.in gettext-tools/man/x-to-1.in
-	cmp -s gettext-runtime/libasprintf/texi2html gettext-tools/doc/texi2html
-	cmp -s gettext-tools/examples/hello-java-awt/m4/TestAWT.java gettext-tools/examples/hello-java-swing/m4/TestAWT.java
-	cmp -s gettext-tools/examples/hello-java-awt/m4/TestAWT.class gettext-tools/examples/hello-java-swing/m4/TestAWT.class
-	test "`sed 1,15d gnulib-local/lib/alloca.in.h | md5sum`" = "`sed 1,15d gettext-runtime/libasprintf/alloca.in.h | md5sum`"
+	cmp -s $(srcdir)/gettext-runtime/po/Makefile.in.in $(srcdir)/gettext-tools/po/Makefile.in.in
+	cmp -s $(srcdir)/gettext-runtime/po/Rules-quot $(srcdir)/gettext-tools/po/Rules-quot
+	cmp -s $(srcdir)/gettext-runtime/po/boldquot.sed $(srcdir)/gettext-tools/po/boldquot.sed
+	cmp -s $(srcdir)/gettext-runtime/po/quot.sed $(srcdir)/gettext-tools/po/quot.sed
+	cmp -s $(srcdir)/gettext-runtime/po/en@quot.header $(srcdir)/gettext-tools/po/en@quot.header
+	cmp -s $(srcdir)/gettext-runtime/po/en@boldquot.header $(srcdir)/gettext-tools/po/en@boldquot.header
+	cmp -s $(srcdir)/gettext-runtime/po/insert-header.sin $(srcdir)/gettext-tools/po/insert-header.sin
+	cmp -s $(srcdir)/gettext-runtime/po/remove-potcdate.sin $(srcdir)/gettext-tools/po/remove-potcdate.sin
+	cmp -s $(srcdir)/gettext-runtime/po/remove-potcdate.sin $(srcdir)/gettext-tools/examples/po/remove-potcdate.sin
+	cmp -s $(srcdir)/gettext-runtime/m4/codeset.m4 $(srcdir)/gettext-tools/gnulib-m4/codeset.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/extern-inline.m4 $(srcdir)/gettext-tools/gnulib-m4/extern-inline.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/fcntl-o.m4 $(srcdir)/gettext-tools/gnulib-m4/fcntl-o.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/flexmember.m4 $(srcdir)/gettext-tools/gnulib-m4/flexmember.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/gettext.m4 $(srcdir)/gettext-tools/gnulib-m4/gettext.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/glibc2.m4 $(srcdir)/gettext-tools/gnulib-m4/glibc2.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/glibc21.m4 $(srcdir)/gettext-tools/gnulib-m4/glibc21.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/iconv.m4 $(srcdir)/gettext-tools/gnulib-m4/iconv.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/intdiv0.m4 $(srcdir)/gettext-tools/gnulib-m4/intdiv0.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/intl.m4 $(srcdir)/gettext-tools/gnulib-m4/intl.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/intl-thread-locale.m4 $(srcdir)/gettext-tools/gnulib-m4/intl-thread-locale.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/intlmacosx.m4 $(srcdir)/gettext-tools/gnulib-m4/intlmacosx.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/intmax.m4 $(srcdir)/gettext-tools/gnulib-m4/intmax.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/inttypes-pri.m4 $(srcdir)/gettext-tools/gnulib-m4/inttypes-pri.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/inttypes_h.m4 $(srcdir)/gettext-tools/gnulib-m4/inttypes_h.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/lcmessage.m4 $(srcdir)/gettext-tools/gnulib-m4/lcmessage.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/lock.m4 $(srcdir)/gettext-tools/gnulib-m4/lock.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/longlong.m4 $(srcdir)/gettext-tools/gnulib-m4/longlong.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/nls.m4 $(srcdir)/gettext-tools/gnulib-m4/nls.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/po.m4 $(srcdir)/gettext-tools/gnulib-m4/po.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/printf-posix.m4 $(srcdir)/gettext-tools/gnulib-m4/printf-posix.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/progtest.m4 $(srcdir)/gettext-tools/gnulib-m4/progtest.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/size_max.m4 $(srcdir)/gettext-tools/gnulib-m4/size_max.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/stdint_h.m4 $(srcdir)/gettext-tools/gnulib-m4/stdint_h.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/threadlib.m4 $(srcdir)/gettext-tools/gnulib-m4/threadlib.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/uintmax_t.m4 $(srcdir)/gettext-tools/gnulib-m4/uintmax_t.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/visibility.m4 $(srcdir)/gettext-tools/gnulib-m4/visibility.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/wchar_t.m4 $(srcdir)/gettext-tools/gnulib-m4/wchar_t.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/wint_t.m4 $(srcdir)/gettext-tools/gnulib-m4/wint_t.m4
+	cmp -s $(srcdir)/gettext-runtime/m4/xsize.m4 $(srcdir)/gettext-tools/gnulib-m4/xsize.m4
+	cmp -s $(srcdir)/gettext-runtime/libasprintf/gnulib-m4/intmax_t.m4 $(srcdir)/gettext-tools/gnulib-m4/intmax_t.m4
+	test "`sed 1,16d $(srcdir)/gettext-runtime/intl/flexmember.h | md5sum`" = "`sed 1,19d $(srcdir)/gettext-tools/gnulib-lib/flexmember.h | md5sum`"
+	test "`sed 1,16d $(srcdir)/gettext-runtime/intl/localcharset.h | md5sum`" = "`sed 1,16d $(srcdir)/gettext-tools/gnulib-lib/localcharset.h | md5sum`"
+	test "`sed 1,16d $(srcdir)/gettext-runtime/intl/localcharset.c | md5sum`" = "`sed 1,16d $(srcdir)/gettext-tools/gnulib-lib/localcharset.c | md5sum`"
+	test "`sed 1,16d $(srcdir)/gettext-runtime/intl/localename.c | md5sum`" = "`sed 1,16d $(srcdir)/gettext-tools/gnulib-lib/localename.c | md5sum`"
+	test "`sed 1,16d $(srcdir)/gettext-runtime/intl/localename-table.in.h | md5sum`" = "`sed 1,16d $(srcdir)/gettext-tools/gnulib-lib/localename-table.h | md5sum`"
+	test "`sed 1,16d $(srcdir)/gettext-runtime/intl/localename-table.c | md5sum`" = "`sed 1,16d $(srcdir)/gettext-tools/gnulib-lib/localename-table.c | md5sum`"
+	test "`sed 1,15d $(srcdir)/gettext-runtime/intl/lock.h | md5sum`" = "`sed 1,15d $(srcdir)/gettext-tools/gnulib-lib/glthread/lock.h | md5sum`"
+	test "`sed 1,15d $(srcdir)/gettext-runtime/intl/lock.c | md5sum`" = "`sed -e 1,15d -e 's,glthread/,,g' $(srcdir)/gettext-tools/gnulib-lib/glthread/lock.c | md5sum`"
+	test "`sed 1,16d $(srcdir)/gettext-runtime/intl/verify.h | md5sum`" = "`sed 1,16d $(srcdir)/gettext-tools/gnulib-lib/verify.h | md5sum`"
+	cmp -s $(srcdir)/gettext-runtime/intl/printf-args.h $(srcdir)/gettext-runtime/libasprintf/printf-args.h
+	cmp -s $(srcdir)/gettext-runtime/intl/printf-args.c $(srcdir)/gettext-runtime/libasprintf/printf-args.c
+	cmp -s $(srcdir)/gettext-runtime/intl/printf-parse.h $(srcdir)/gettext-runtime/libasprintf/printf-parse.h
+	cmp -s $(srcdir)/gettext-runtime/intl/printf-parse.c $(srcdir)/gettext-runtime/libasprintf/printf-parse.c
+	cmp -s $(srcdir)/gettext-runtime/intl/verify.h $(srcdir)/gettext-runtime/libasprintf/verify.h
+	test "`sed 1,18d $(srcdir)/gettext-runtime/intl/relocatable.h | md5sum`" = "`sed 1,18d $(srcdir)/gettext-tools/gnulib-lib/relocatable.h | md5sum`"
+	test "`sed 1,18d $(srcdir)/gettext-runtime/intl/relocatable.c | md5sum`" = "`sed 1,18d $(srcdir)/gettext-tools/gnulib-lib/relocatable.c | md5sum`"
+	cmp -s $(srcdir)/gettext-runtime/intl/vasnprintf.h $(srcdir)/gettext-runtime/libasprintf/vasnprintf.h
+	test "`sed 1,16d $(srcdir)/gettext-runtime/intl/vasnprintf.c | md5sum`" = "`sed 1,16d $(srcdir)/gettext-tools/gnulib-lib/vasnprintf.c | md5sum`"
+	cmp -s $(srcdir)/gettext-runtime/intl/vasnprintf.c $(srcdir)/gettext-runtime/libasprintf/vasnprintf.c
+	cmp -s $(srcdir)/gettext-runtime/intl/xsize.h $(srcdir)/gettext-runtime/libasprintf/xsize.h
+	test "`sed 1,16d $(srcdir)/gettext-runtime/intl/xsize.h | md5sum`" = "`sed 1,16d $(srcdir)/gettext-tools/gnulib-lib/xsize.h | md5sum`"
+	cmp -s $(srcdir)/gettext-runtime/man/help2man $(srcdir)/gettext-tools/man/help2man
+	cmp -s $(srcdir)/gettext-runtime/man/x-to-1.in $(srcdir)/gettext-tools/man/x-to-1.in
+	cmp -s $(srcdir)/gettext-runtime/libasprintf/texi2html $(srcdir)/gettext-tools/doc/texi2html
+	cmp -s $(srcdir)/gettext-tools/examples/hello-java-awt/m4/TestAWT.java $(srcdir)/gettext-tools/examples/hello-java-swing/m4/TestAWT.java
+	cmp -s $(srcdir)/gettext-tools/examples/hello-java-awt/m4/TestAWT.class $(srcdir)/gettext-tools/examples/hello-java-swing/m4/TestAWT.class
+	test "`sed 1,15d $(srcdir)/gnulib-local/lib/alloca.in.h | md5sum`" = "`sed 1,15d $(srcdir)/gettext-runtime/libasprintf/alloca.in.h | md5sum`"
 
 
 # OS/2 port.
