--- a/gettext-tools/tests/init-env.in
+++ b/gettext-tools/tests/init-env.in
@@ -1,10 +1,6 @@
 # Variable needed by LTLIBINTL.
 top_builddir=../..
 
-# Variable needed by xgettext.
-GETTEXTDATADIR="$abs_top_srcdir"
-export GETTEXTDATADIR
-
 OBJEXT="@OBJEXT@"
 EXEEXT="@EXEEXT@"
 CC="@CC@"
@@ -28,6 +24,23 @@ LOCALE_JA="@LOCALE_JA@"
 LOCALE_DE_UTF8="@LOCALE_DE_UTF8@"
 host_os="@host_os@"
 ARCHIVE_VERSION="@ARCHIVE_VERSION@"
+
+# For specific filename variables, define a variant that - in mingw builds
+# in a Cygwin environment - has the Windows filename syntax.
+wabs_srcdir="$abs_srcdir"
+wabs_top_srcdir="$abs_top_srcdir"
+case "$host_os" in
+  mingw*)
+    if (cygpath --version) >/dev/null 2>/dev/null; then
+      wabs_srcdir=`cygpath -w "$abs_srcdir"`
+      wabs_top_srcdir=`cygpath -w "$abs_top_srcdir"`
+    fi
+    ;;
+esac
+
+# Variable needed by xgettext.
+GETTEXTDATADIR="$wabs_top_srcdir"
+export GETTEXTDATADIR
 
 : ${GETTEXT=tstgettext}
 : ${NGETTEXT=tstngettext}
