build: Use Automake in intl subdirectory.
* gettext-runtime/intl/Makefile.am: New file, based on
gettext-runtime/intl/Makefile.in.
* gettext-runtime/intl/Makefile.in: Remove file.
* autogen.sh: Copy gettext-runtime/intl/Makefile.am to
gettext-tools/intl/Makefile.am.
* gettext-runtime/configure.ac (USE_INCLUDED_LIBINTL, BUILD_INCLUDED_LIBINTL,
PACKAGE_IS_GETTEXT_TOOLS, PRELOADABLE_LIBINTL): New conditionals.
* gettext-tools/configure.ac: Likewise.

--- a/.gitignore
+++ b/.gitignore
@@ -318,6 +318,7 @@
 /gettext-runtime/config.h.in
 /gettext-runtime/Makefile.in
 /gettext-runtime/doc/Makefile.in
+/gettext-runtime/intl/Makefile.in
 /gettext-runtime/intl-csharp/Makefile.in
 /gettext-runtime/intl-java/Makefile.in
 /gettext-runtime/libasprintf/aclocal.m4
