--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -114,6 +114,12 @@ dnl Checks for libraries.
 dnl These are the only lines required to internationalize the package.
 dnl (OK, not quite, the AC_CONFIG_FILES has also some parts.)
 AM_GNU_GETTEXT([use-libtool], [need-ngettext])
+dnl Conditionals for the intl/ directory.
+AM_CONDITIONAL([USE_INCLUDED_LIBINTL], [test $USE_INCLUDED_LIBINTL = yes])
+AM_CONDITIONAL([BUILD_INCLUDED_LIBINTL], [test $BUILD_INCLUDED_LIBINTL = yes])
+AM_CONDITIONAL([PACKAGE_IS_GETTEXT_TOOLS], [true])
+AM_CONDITIONAL([PRELOADABLE_LIBINTL],
+  [test $USE_INCLUDED_LIBINTL = no && test $GLIBC2 = yes])
 
 dnl This line internationalizes the bison generated parsers.
 BISON_I18N
@@ -498,10 +504,11 @@ AC_CONFIG_FILES([Makefile])
 
 AC_CONFIG_FILES([doc/Makefile])
 
-AC_CONFIG_FILES([intl/Makefile:../gettext-runtime/intl/Makefile.in], [
+AC_CONFIG_FILES([intl/Makefile], [
   # Change srcdir variable so that it points to ../gettext-runtime/intl.
   sed -e 's|^srcdir =.*$|srcdir = $(top_srcdir)/../gettext-runtime/intl|' \
       -e 's|^VPATH =.*$||' \
+      -e 's|^DISTFILES =.*|DISTFILES =|' \
     < intl/Makefile > intl/Makefile.tmp
   mv intl/Makefile.tmp intl/Makefile
   ])
