color: Make color.c package-neutral.
* gettext-tools/src/color.h (style_file_prepare): Add arguments.
* gettext-tools/src/color.c: Don't include relocatable.h.
(style_file_lookup): Add stylesdir_after_install argument.
(style_file_prepare): Add arguments.
* gettext-tools/src/write-catalog.c: Include relocatable.h.
(GETTEXTSTYLESDIR): New macro.
(msgdomain_list_print): Update style_file_prepare calls.
* gettext-tools/tests/init-env.in (GETTEXTSTYLESDIR): New environment variable.

--- a/gettext-tools/tests/init-env.in
+++ b/gettext-tools/tests/init-env.in
@@ -42,6 +42,10 @@ esac
 GETTEXTDATADIR="$wabs_top_srcdir"
 export GETTEXTDATADIR
 
+# Variable needed for checking output with --color.
+GETTEXTSTYLESDIR="$GETTEXTDATADIR/styles"
+export GETTEXTSTYLESDIR
+
 : ${GETTEXT=tstgettext}
 : ${NGETTEXT=tstngettext}
 : ${XGETTEXT=xgettext}
