libtextstyle: Omit tests that rely on more than the public libtextstyle API.
* libtextstyle/autogen.sh: Don't pass --with-tests to gnulib-tool.
(GNULIB_MODULES): Add term-ostream-tests.
* gnulib-local/modules/term-ostream-tests (Makefile.am): Don't add
@INTL_MACOSX_LIBS@ to test_term_ostream_LDADD.
* gettext-tools/gnulib-tests/Makefile.am (test_term_ostream_LDADD): Add
@INTL_MACOSX_LIBS@ here.

--- a/gettext-tools/gnulib-tests/Makefile.am
+++ b/gettext-tools/gnulib-tests/Makefile.am
@@ -24,6 +24,10 @@ AUTOMAKE_OPTIONS += 1.11 color-tests
 # Ensure that test-quotearg.c finds libintl.h.
 AM_CPPFLAGS += -I../intl
 
+# Ensure that test-term-ostream links correctly when using --disable-shared
+# on macOS.
+test_term_ostream_LDADD += @INTL_MACOSX_LIBS@
+
 
 # Remove .deps directories creates by 'configure'.
 # I would say that this left-over is an Automake 1.16.1 bug.
