build: Make shared library dependencies work in relocatable installation.
* gettext-tools/gnulib-lib/Makefile.am (RELOCATABLE_LIBRARY_PATH): New variable.
(libgettextlib_la_LDFLAGS): Augment for relocatable installation.
* gettext-tools/src/Makefile.am (libgettextsrc_la_LDFLAGS): Augment for
relocatable installation.
* gettext-tools/libgettextpo/Makefile.am (RELOCATABLE_LIBRARY_PATH): New
variable.
(libgettextpo_la_LDFLAGS): Augment for relocatable installation.

--- a/gettext-tools/libgettextpo/Makefile.am
+++ b/gettext-tools/libgettextpo/Makefile.am
@@ -122,6 +122,15 @@ if OS2
 libgettextpo_la_LDFLAGS += -os2dllname gtpo
 endif
 
+# Specify installation directory, for --enable-relocatable.
+if RELOCATABLE_VIA_LD
+# This is needed, because libgettextpo depends on libintl.
+libgettextpo_la_LDFLAGS += `$(RELOCATABLE_LDFLAGS) $(libdir)`
+endif
+
+# Support for relocatability.
+RELOCATABLE_LIBRARY_PATH = $(libdir)
+
 # Version information according to Woe32 conventions.
 EXTRA_DIST += libgettextpo.rc
 if WOE32
